Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27075

mysql_upgrade_service.exe : using uninitialized memory defaults_file

Details

    Description

      There is a static analysis warning in IDE "using uninitialized memory" as input variable for GetPrivateProfileString
      function.

      Looks that this section could not ever work, but it is not critical, apparently would only rename some deprecated variable, in my.ini file, if it worked.

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.