MDEV-27075 mysql_upgrade_service.exe - using uninitialized memory 'defaults_file'

Remove section that was trying to rename default-character-set to character-set-server

This seems to be an old workaround for some upgrade warning, which did not
work for some time already, because the ini filename was not initialized.